# modpath-rw

./: .gitignore  .gitmodules  LICENSE.md  README.md  environment.yml  meson.build
examples/ex05_mf6/: README.md  ex05_mf6.chd  ex05_mf6.dis  ex05_mf6.ic  ex05_mf6.ims  ex05_mf6.nam  ex05_mf6.npf  ex05_mf6.oc  ex05_mf6.tdis  ex05_mf6.wel  ex05a_mf6.dsp  ex05a_mf6.mpnam  ex05a_mf6.mprw  ex05a_mf6.obs  ex05a_mf6.src  ex05b_mf6.dsp  ex05b_mf6.mpbas  ex05b_mf6.mpnam  ex05b_mf6.mprw  ex05b_mf6.obs  ex05b_mf6.spc  ex05b_mf6.src  mfsim.nam
examples/ex05_mprw_p09mt3d/: README.md  gwf-p09-mf6.chd  gwf-p09-mf6.dis  gwf-p09-mf6.hds  gwf-p09-mf6.ic  gwf-p09-mf6.ims  gwf-p09-mf6.nam  gwf-p09-mf6.npf  gwf-p09-mf6.oc  gwf-p09-mf6.tdis  gwf-p09-mf6.wel  mfsim.nam  obs1cellsarea.csv  p09sim.dsp  p09sim.mpbas  p09sim.mpnam  p09sim.mprw  p09sim.obs  p09sim.obs2  p09sim.obs3  p09sim.rwopts  p09sim.src
examples/ex06_mf6/: README.md  ex06_mf6.chd  ex06_mf6.dis  ex06_mf6.ic  ex06_mf6.ims  ex06_mf6.nam  ex06_mf6.npf  ex06_mf6.oc  ex06_mf6.tdis  ex06_mf6.wel  ex06_mf6.wel.ts  ex06a_mf6.mpbas  ex06a_mf6.mpnam  ex06a_mf6.mprw  ex06a_mf6.obs  ex06a_mf6.src  mfsim.nam
examples/ex07_mf6/: README.md  ex07_mf6.chd  ex07_mf6.dis  ex07_mf6.ic  ex07_mf6.ims  ex07_mf6.nam  ex07_mf6.npf  ex07_mf6.oc  ex07_mf6.tdis  ex07a_mf6.dsp  ex07a_mf6.gpkde  ex07a_mf6.ic  ex07a_mf6.mpbas  ex07a_mf6.mpnam  ex07a_mf6.mprw  ex07a_mf6.rwopts  mfsim.nam
lib/rngzig/: rng_par_zig.f90
make/: makefile-gfortran-debug  makefile-gfortran-mac  makefile-gfortran-pc  makefile-ifort-pc
msvs/: mpathRW.sln  mpathRW.vfproj  mpathrw.vfproj
readme/: .CONTRIBUTING.md.swp  CONTRIBUTING.md
source/: BoundaryConditions.f90  BudgetReader.f90  BudgetRecordHeader.f90  Constants.f90  DispersionData.f90  FlowModel.f90  FlowModelData.f90  GlobalData.f90  GridCell.f90  GridProjectedKDE.f90  Histogram.f90  KernelMultiGaussian.f90  MPath7.f90  ModflowGrid.f90  ModflowRectangularGrid.f90  ModpathBasicData.f90  ModpathCellData.f90  ModpathSimulationData.f90  ModpathSubCellData.f90  Observation.f90  Particle.f90  ParticleGroup.f90  ParticleLocationList.f90  ParticleManager.F90  ParticleManager.f90  ParticleTrackingEngine.f90  ParticleTrackingOptions.f90  RectangularGridDisuMfusg.f90  RectangularGridDisvMf6.f90  Solute.f90  StartingLocationReader.f90  TrackCell.f90  TrackSubCell.f90  TrackSubCellResult.f90  TransportModelData.f90  UtilMisc.f90  compilerversion.fpp  linear_interpolation_module.f90  openspec.inc  utl7.f  (+1 more)
src/: DispersionData.f90  FlowModelData.f90  HeadReader.f90  MPathRW.F90  ModflowGrid.f90  ModpathBasicData.f90  ModpathCellData.f90  ModpathSimulationData.f90  ModpathSubCellData.f90  Observation.f90  Particle.f90  ParticleCoordinateList.f90  ParticleGroup.f90  ParticleManager.F90  ParticleTrackingEngine.f90  ParticleTrackingOptions.f90  RectangularGridDis.f90  RectangularGridDisMf6.f90  RectangularGridDisuMf6.f90  Solute.f90  StartingLocationReader.f90  TimeDiscretizationData.f90  TrackCell.f90  TrackSubCell.F90  TrackSubCellResult.f90  TransportModelData.f90  compilerversion.fpp  meson.build  utl7.f  utl8.f90
src/lib/finterp/: LICENSE  linear_interpolation_module.F90
src/lib/gpkde/: GridCell.f90  GridProjectedKDE.F90  GridProjectedKDE.f90  Histogram.F90  Histogram.f90  KernelMultiGaussian.f90  Precision.F90
